--- a/top_page.html
+++ b/top_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>三保地引網 | トップページ</title>
+  <title>三保地引網 研究プロジェクト | トップページ</title>
   <link rel="icon" href="/tab_icon.jpg" type="image/jpeg">
   <link rel="stylesheet" href="/common.css">
 
