--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-grid">
       <div class="footer-about">
-        <a href="top_page.html" class="logo-link"><img src="/image_f48d9f.png" alt="三保地引網 ロゴ" class="logo-img"></a>
+        <a href="/top_page.html" class="logo-link"><img src="/image_f48d9f.png" alt="三保地引網 ロゴ" class="logo-img"></a>
         <p class="lang-ja" style="margin-top:1rem;">三保地引網 研究プロジェクト</p>
         <p class="lang-en" style="display:none; margin-top:1rem;">Miho Jibikiami Project</p>
       </div>
@@ -10,18 +10,18 @@
         <h4 class="lang-ja">データベース</h4>
         <h4 class="lang-en" style="display:none;">Database</h4>
         <ul>
-          <li><a href="data_top/data_fish.html" class="lang-ja">生き物のデータ</a><a href="data_top/data_fish.html" class="lang-en" style="display: none;">Catch Data</a></li>
-          <li><a href="data_top/data_environmental.html" class="lang-ja">海の様子</a><a href="data_top/data_environmental.html" class="lang-en" style="display: none;">Sea Conditions</a></li>
-          <li><a href="data_top/data_bydate.html" class="lang-ja">調査日ごとの概要</a><a href="data_top/data_bydate.html" class="lang-en" style="display: none;">Daily Summary</a></li>
-          <li><a href="data_top/data_otsumami.html" class="lang-ja">今日の肴</a><a href="data_top/data_otsumami.html" class="lang-en" style="display: none;">Today's Otsumami</a></li>
+          <li><a href="/data_top/data_fish.html" class="lang-ja">生き物のデータ</a><a href="data_top/data_fish.html" class="lang-en" style="display: none;">Catch Data</a></li>
+          <li><a href="/data_top/data_environmental.html" class="lang-ja">海の様子</a><a href="data_top/data_environmental.html" class="lang-en" style="display: none;">Sea Conditions</a></li>
+          <li><a href="/data_top/data_bydate.html" class="lang-ja">調査日ごとの概要</a><a href="data_top/data_bydate.html" class="lang-en" style="display: none;">Daily Summary</a></li>
+          <li><a href="/data_top/data_otsumami.html" class="lang-ja">今日の肴</a><a href="data_top/data_otsumami.html" class="lang-en" style="display: none;">Today's Otsumami</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h4 class="lang-ja">活動について</h4>
         <h4 class="lang-en" style="display:none;">About Us</h4>
         <ul>
-          <li><a href="fujioka_lab/fujioka_top.html" class="lang-ja">活動内容</a><a href="fujioka_lab/fujioka_top.html" class="lang-en" style="display: none;">Activities</a></li>
-          <li><a href="schedule/schedule.html" class="lang-ja">スケジュール</a><a href="schedule/schedule.html" class="lang-en" style="display: none;">Schedule</a></li>
+          <li><a href="/fujioka_lab/fujioka_top.html" class="lang-ja">活動内容</a><a href="fujioka_lab/fujioka_top.html" class="lang-en" style="display: none;">Activities</a></li>
+          <li><a href="/schedule/schedule.html" class="lang-ja">スケジュール</a><a href="schedule/schedule.html" class="lang-en" style="display: none;">Schedule</a></li>
           <li><a href="https://www.mihojibiki.com/" target="_blank" rel="noopener"><span class="lang-ja">地引網保存会</span><span class="lang-en" style="display: none;">Preservation Society</span></a></li>
         </ul>
       </div>
