--- a/top_page.html
+++ b/top_page.html
@@ -54,9 +54,9 @@
     <section class="hero" id="hero-section">
       <div class="hero-slider"></div>
       <div class="hero-overlay"></div>
-      <div class="hero-content">
-          <h2 class="lang-ja">三保の海を調べる<br>〜地引網で科学する〜</h2>
-          <h2 class="lang-en" style="display:none;">Investigating the Miho Sea<br>~Science with Beach Seining~</h2>
+<div class="hero-content">
+          <h2 class="lang-ja">三保の海を調べる<br><span class="hero-subtitle">〜地引網で科学する〜</span></h2>
+          <h2 class="lang-en" style="display:none;">Investigating the Miho Sea<br><span class="hero-subtitle">~Science with Beach Seining~</span></h2>
       </div>
     </section>
 
