--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,8 @@
           <li><a href="/data_top/data_environmental.html" class="lang-ja">海の様子</a><a href="data_top/data_environmental.html" class="lang-en" style="display: none;">Sea Conditions</a></li>
           <li><a href="/data_top/data_bydate.html" class="lang-ja">調査日ごとの概要</a><a href="data_top/data_bydate.html" class="lang-en" style="display: none;">Daily Summary</a></li>
           <li><a href="/data_top/data_otsumami.html" class="lang-ja">今日の肴</a><a href="data_top/data_otsumami.html" class="lang-en" style="display: none;">Today's Otsumami</a></li>
-        </ul>
+          <li><a href="/data_top/zukan.html" class="lang-ja">生き物図鑑</a><a href="/data_top/zukan.html" class="lang-en" style="display: none;">Creature Guide</a></li>
+          </ul>
       </div>
       <div class="footer-col">
         <h4 class="lang-ja">活動について</h4>
@@ -29,7 +30,7 @@
         <h4 class="lang-ja">お問い合わせ</h4>
         <h4 class="lang-en" style="display:none;">Contact</h4>
         <ul>
-           <li><a href="mailto:fujioka.fishlab@gmail.com" class="lang-ja">メールでお問い合わせ</a><a href="mailto:fujioka.fishlab@gmail.com" class="lang-en" style="display: none;">Contact by Email</a></li>
+            <li><a href="mailto:fujioka.fishlab@gmail.com" class="lang-ja">メールでお問い合わせ</a><a href="mailto:fujioka.fishlab@gmail.com" class="lang-en" style="display: none;">Contact by Email</a></li>
         </ul>
       </div>
     </div>
