--- a/header.html
+++ b/header.html
@@ -23,7 +23,8 @@
             <li><a href="../data_top/data_environmental.html" class="lang-ja">海の様子</a><a href="../data_top/data_environmental.html" class="lang-en" style="display: none;">Sea Conditions</a></li>
             <li><a href="../data_top/data_bydate.html" class="lang-ja">調査日ごとの概要</a><a href="../data_top/data_bydate.html" class="lang-en" style="display: none;">Daily Summary</a></li>
             <li><a href="../data_top/data_otsumami.html" class="lang-ja">今日の肴</a><a href="../data_top/data_otsumami.html" class="lang-en" style="display: none;">Today's Otsumami</a></li>
-          </ul>
+            <li><a href="../data_top/zukan.html" class="lang-ja">生き物図鑑</a><a href="../data_top/zukan.html" class="lang-en" style="display: none;">Creature Guide</a></li>
+            </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="lang-ja">活動内容</a>
