--- a/what_jibiki.html
+++ b/what_jibiki.html
@@ -153,7 +153,7 @@
                     <div class="method-step">
                         <img src="/images/step3.jpg" alt="船が海岸に戻る様子" class="method-image">
                         <div class="method-text">
-                            <h4 class="lang-ja">③ 帰港</h4>
+                            <h4 class="lang-ja">③ 網の片方を海岸へ</h4>
                             <h4 class="lang-en" style="display:none;">3. Returning to Shore</h4>
                             <p class="lang-ja">網を配置した後に、積んだロープを垂らしながら海岸に持って帰る。</p>
                             <p class="lang-en" style="display:none;">After the net is fully deployed, the boat brings the second rope back to the beach.</p>
