--- a/what_jibiki.html
+++ b/what_jibiki.html
@@ -126,7 +126,7 @@
             </section>
 
             <section class="content-section">
-                <h2 class="section-title lang-ja">地引網の漁業方法</h2>
+                <h2 class="section-title lang-ja">地引網の手順</h2>
                 <h2 class="section-title lang-en" style="display:none;">How Jibikiami Works</h2>
 
                 <div class="method-list">
