--- a/header.html
+++ b/header.html
@@ -39,7 +39,7 @@
           <a href="#" class="lang-ja">スケジュール</a>
           <a href="#" class="lang-en" style="display: none;">Schedule</a>
           <ul>
-            <li><a href="../schedule/schedule.html" class="lang-ja">これからの地引網の予定</a><a href="../schedule/schedule.html" class="lang-en" style="display: none;">Upcoming Events</a></li>
+            <li><a href="../schedule/schedule.html" class="lang-ja">これからの調査の予定</a><a href="../schedule/schedule.html" class="lang-en" style="display: none;">Upcoming Research Events</a></li>
             <li><a href="../schedule/kako.html" class="lang-ja">過去の調査</a><a href="../schedule/kako.html" class="lang-en" style="display: none;">Past Research</a></li>
           </ul>
         </li>
