--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -68,7 +68,7 @@
     <div class="coming-soon-wrapper">
         <h1 class="cs-title">COMING SOON</h1>
         <p class="cs-text lang-ja">
-            ただいまスケジュールの調整中です。<br>
+            ただいまページの調整中です。<br>
             公開までもうしばらくお待ちください。
         </p>
         <p class="cs-text lang-en" style="display:none;">
