--- a/schedule/kako.html
+++ b/schedule/kako.html
@@ -13,9 +13,9 @@
 
   <main>
     <div class="page-header">
-        <h1 class="page-title lang-ja">過去の調査日とその日の様子</h1>
+        <h1 class="page-title lang-ja">過去の調査日</h1>
         <h1 class="page-title lang-en" style="display:none;">Daily Summary</h1>
-        <p class="page-subtitle lang-ja">調査を実施した日に色がついています。カレンダーから日付を選択すると、その日の漁獲データや海の様子を確認できます。</p>
+        <p class="page-subtitle lang-ja">調査を実施した日に色がついています。カレンダーから日付を選択すると、その日のコメントを確認できます。</p>
         <p class="page-subtitle lang-en" style="display:none;">Select a date from the calendar to view catch data and sea conditions for that day.</p>
     </div>
     <div class="main-content">
