--- a/data_top/kodomo/kodomozukan.html
+++ b/data_top/kodomo/kodomozukan.html
@@ -4,21 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>キッズ生き物図鑑 | 三保地引網</title>
-  
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="/common.css">
 
   <style>
-    /* === キッズページ専用スタイル === */
     .main-content {
-        background-color: #FFF9E5; /* クリーム色 */
-        font-family: "Hiragino Maru Gothic ProN", "Rounded Mplus 1c", sans-serif; /* 丸ゴシック体を優先 */
-        color: #5D4037; /* 文字色は焦げ茶色で優しく */
+        background-color: #FFF9E5;
+        font-family: "Hiragino Maru Gothic ProN", "Rounded Mplus 1c", sans-serif;
+        color: #5D4037;
         padding: 4rem 0;
     }
 
-    /* ページタイトルのエリア（共通ヘッダーの下） */
     .page-header {
-        background-color: #FFB74D; /* オレンジ色 */
+        background-color: #FFB74D;
         text-align: center;
         padding: 3rem 1rem;
         border-bottom: 5px solid #F57C00;
@@ -37,7 +34,6 @@
         font-weight: bold;
     }
 
-    /* 「図鑑にもどる」ボタン */
     .back-btn-area {
         margin-top: 1.5rem;
     }
@@ -56,11 +52,10 @@
         transform: translateY(-2px);
     }
 
-    /* --- カードデザイン（子供向け） --- */
     .kids-card {
         background-color: #ffffff;
-        border: 4px solid #FFCC80; /* 枠線を太く */
-        border-radius: 20px; /* 丸みを強く */
+        border: 4px solid #FFCC80;
+        border-radius: 20px;
         margin-bottom: 3rem;
         padding: 2rem;
         box-shadow: 0 8px 16px rgba(0,0,0,0.05);
@@ -87,7 +82,6 @@
         text-align: center;
     }
 
-    /* 説明リストのデザイン */
     .kids-details dt {
         font-weight: bold;
         background-color: #FFE0B2;
@@ -105,9 +99,8 @@
         font-size: 1.05rem;
     }
 
-    /* --- 毒魚セクション --- */
     .toxic-section {
-        background-color: #FFEBEE; /* 赤っぽい背景 */
+        background-color: #FFEBEE;
         border: 4px solid #EF5350;
         border-radius: 20px;
         padding: 2rem;
@@ -136,7 +129,6 @@
         width: fit-content;
     }
 
-    /* 毒魚カードのアレンジ */
     .kids-card.toxic {
         border-color: #EF5350;
     }
@@ -160,15 +152,16 @@
         <p class="page-subtitle">三保(みほ)の海(うみ)の仲間(なかま)たち</p>
         
         <div class="back-btn-area">
-            <a href="../zukan.html" class="back-btn">← 図鑑(ずかん)にもどる</a>
+            <a href="/zukan.html" class="back-btn">← 図鑑(ずかん)にもどる</a>
         </div>
     </div>
 
     <div class="main-content">
         <div class="container">
 
+
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/EB5757/FFFFFF?text=Madai" alt="マダイ">
+                <img src="https://placehold.co/600x400/EB5757/FFFFFF?text=Madai" alt="マダイ">
                 <h2 class="fish-name">マダイ（真鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -189,7 +182,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/F2994A/FFFFFF?text=Chidai" alt="チダイ">
+                <img src="https://placehold.co/600x400/F2994A/FFFFFF?text=Chidai" alt="チダイ">
                 <h2 class="fish-name">チダイ（血鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -210,7 +203,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/BDBDBD/FFFFFF?text=Hedai" alt="ヘダイ">
+                <img src="https://placehold.co/600x400/BDBDBD/FFFFFF?text=Hedai" alt="ヘダイ">
                 <h2 class="fish-name">ヘダイ（平鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -231,7 +224,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/4F4F4F/FFFFFF?text=Mutsu" alt="ムツ">
+                <img src="https://placehold.co/600x400/4F4F4F/FFFFFF?text=Mutsu" alt="ムツ">
                 <h2 class="fish-name">ムツ</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -252,7 +245,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/56CCF2/FFFFFF?text=Maaji" alt="マアジ">
+                <img src="https://placehold.co/600x400/56CCF2/FFFFFF?text=Maaji" alt="マアジ">
                 <h2 class="fish-name">マアジ（真鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -273,7 +266,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/F2C94C/FFFFFF?text=Kaiwari" alt="カイワリ">
+                <img src="https://placehold.co/600x400/F2C94C/FFFFFF?text=Kaiwari" alt="カイワリ">
                 <h2 class="fish-name">カイワリ</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -294,7 +287,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/F2C94C/FFFFFF?text=Shimaaji" alt="シマアジ">
+                <img src="https://placehold.co/600x400/F2C94C/FFFFFF?text=Shimaaji" alt="シマアジ">
                 <h2 class="fish-name">シマアジ（縞鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -315,7 +308,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/828282/FFFFFF?text=Konoshiro" alt="コノシロ">
+                <img src="https://placehold.co/600x400/828282/FFFFFF?text=Konoshiro" alt="コノシロ">
                 <h2 class="fish-name">コノシロ</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -336,7 +329,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/9B51E0/FFFFFF?text=Kataboshiiwashi" alt="カタボシイワシ">
+                <img src="https://placehold.co/600x400/9B51E0/FFFFFF?text=Kataboshiiwashi" alt="カタボシイワシ">
                 <h2 class="fish-name">カタボシイワシ（肩星鰯）</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -357,7 +350,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://via.placeholder.com/600x400/2F80ED/FFFFFF?text=Gima" alt="ギマ">
+                <img src="https://placehold.co/600x400/2F80ED/FFFFFF?text=Gima" alt="ギマ">
                 <h2 class="fish-name">ギマ</h2>
                 <dl class="kids-details">
                     <dt>👀 特徴</dt>
@@ -383,7 +376,7 @@
                 <p class="toxic-warning">※さわらないでね！</p>
 
                 <article class="kids-card toxic">
-                    <img src="https://via.placeholder.com/600x400/F2C94C/000000?text=Hakofugu" alt="ハコフグ">
+                    <img src="https://placehold.co/600x400/F2C94C/000000?text=Hakofugu" alt="ハコフグ">
                     <h2 class="fish-name">ハコフグ</h2>
                     <dl class="kids-details">
                         <dt>👀 特徴</dt>
@@ -404,7 +397,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://via.placeholder.com/600x400/9B51E0/FFFFFF?text=Setominokasago" alt="セトミノカサゴ">
+                    <img src="https://placehold.co/600x400/9B51E0/FFFFFF?text=Setominokasago" alt="セトミノカサゴ">
                     <h2 class="fish-name">セトミノカサゴ</h2>
                     <dl class="kids-details">
                         <dt>👀 特徴</dt>
@@ -425,7 +418,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://via.placeholder.com/600x400/333333/FFFFFF?text=Moyoufugu" alt="モヨウフグ">
+                    <img src="https://placehold.co/600x400/333333/FFFFFF?text=Moyoufugu" alt="モヨウフグ">
                     <h2 class="fish-name">モヨウフグ</h2>
                     <dl class="kids-details">
                         <dt>👀 特徴</dt>
@@ -446,7 +439,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://via.placeholder.com/600x400/8B5A2B/FFFFFF?text=Kitamakura" alt="キタマクラ">
+                    <img src="https://placehold.co/600x400/8B5A2B/FFFFFF?text=Kitamakura" alt="キタマクラ">
                     <h2 class="fish-name">キタマクラ</h2>
                     <dl class="kids-details">
                         <dt>👀 特徴</dt>
@@ -473,7 +466,7 @@
 
   <div id="footer-placeholder"></div>
 
-  <script src="../common.js"></script>
+  <script src="/common.js"></script>
 
 </body>
 </html>
