--- a/data_top/zukan.html
+++ b/data_top/zukan.html
@@ -159,7 +159,7 @@
         <p class="page-subtitle lang-en" style="display:none;">Creatures caught with the beach seine</p>
 
         <div class="kids-link-area">
-            <a href="kodomo.html" class="kids-btn">
+            <a href="../data_top/kodomo.html" class="kids-btn">
                 <span class="lang-ja">こどもようページはこちら</span>
                 <span class="lang-en" style="display:none;">For Kids (Click Here)</span>
             </a>
