--- a/data_top/kodomo.html
+++ b/data_top/kodomo.html
@@ -152,7 +152,7 @@
         <p class="page-subtitle">三保の海の<ruby>仲間<rt>なかま</rt></ruby>たち</p>
         
         <div class="back-btn-area">
-            <a href="/zukan.html" class="back-btn">← <ruby>図鑑<rt>ずかん</rt></ruby>にもどる</a>
+            <a href="../data_top/zukan.html" class="back-btn">← <ruby>図鑑<rt>ずかん</rt></ruby>にもどる</a>
         </div>
     </div>
 
