--- a/data_top/zukan.html
+++ b/data_top/zukan.html
@@ -180,15 +180,15 @@
                         <h3>マダイ（真鯛）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>体色は鮮やかな赤色で、背側には青く輝く斑点が散在していますが、これは成魚になると少なくなります [cite: 3][cite_start]。尾びれの後ろの縁が黒く、下の縁が白いのが特徴です [cite: 3][cite_start]。背びれは糸状に伸びず、整った形をしています [cite: 3]。</dd>
+                            <dd>体色は鮮やかな赤色で、背側には青く輝く斑点が散在していますが、これは成魚になると少なくなります。尾びれの後ろの縁が黒く、下の縁が白いのが特徴です。背びれは糸状に伸びず、整った形をしています。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道から九州南岸までの日本各地の沿岸に広く分布し、朝鮮半島や台湾、南シナ海などでも見られます [cite: 5]。</dd>
+                            <dd>北海道から九州南岸までの日本各地の沿岸に広く分布し、朝鮮半島や台湾、南シナ海などでも見られます。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>水深30〜200m程度の、岩場や砂利、砂がある海底に生息しています [cite: 7]。</dd>
+                            <dd>水深30〜200m程度の、岩場や砂利、砂がある海底に生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>春から初夏にかけて（4月〜6月頃）行われます [cite: 8]。</dd>
+                            <dd>春から初夏にかけて（4月〜6月頃）行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月から12月頃まで長く獲れますが、特に6月頃に多く獲れます [cite: 10]。</dd>
+                            <dd>4月から12月頃まで長く獲れますが、特に6月頃に多く獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -201,15 +201,15 @@
                         <h3>チダイ（血鯛）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>マダイによく似ていますが、エラのふち（鰓膜）が幅広く鮮やかな赤色をしており、血が滲んでいるように見えることが名前の由来です [cite: 13][cite_start]。背びれの第3・4棘が少し糸状に長く伸びているのも特徴です [cite: 13][cite_start]。体色は全体的に淡いピンク色を帯びた銀色で、体側に青い小さな斑点があります [cite: 14, 15]。</dd>
+                            <dd>マダイによく似ていますが、エラのふち（鰓膜）が幅広く鮮やかな赤色をしており、血が滲んでいるように見えることが名前の由来です。背びれの第3・4棘が少し糸状に長く伸びているのも特徴です。体色は全体的に淡いピンク色を帯びた銀色で、体側に青い小さな斑点があります。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道南部から九州南岸にかけての日本海・太平洋沿岸や瀬戸内海、朝鮮半島南部に広く分布しています [cite: 17]。</dd>
+                            <dd>北海道南部から九州南岸にかけての日本海・太平洋沿岸や瀬戸内海、朝鮮半島南部に広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沖合に広がる岩場や砂利、砂地の海底に生息しています [cite: 19]。</dd>
+                            <dd>沖合に広がる岩場や砂利、砂地の海底に生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>秋（9月〜11月頃）に行われます [cite: 20]。</dd>
+                            <dd>秋（9月〜11月頃）に行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>5〜6月頃と9〜11月頃によく獲れ、特に9〜10月頃に漁獲が多くなります [cite: 21]。</dd>
+                            <dd>5〜6月頃と9〜11月頃によく獲れ、特に9〜10月頃に漁獲が多くなります。</dd>
                         </dl>
                     </div>
                 </article>
@@ -223,15 +223,15 @@
                         <h3>ヘダイ（平鯛）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>体は銀白色で、横から見ると平たい楕円形をしており、数本の縦線が走っています [cite: 24][cite_start]。腹びれと尻びれは、特に若魚において黄色味を帯びるのが特徴です [cite: 24]。口が「へ」の字に見えることも名前に関係していると言われています。</dd>
+                            <dd>体は銀白色で、横から見ると平たい楕円形をしており、数本の縦線が走っています。腹びれと尻びれは、特に若魚において黄色味を帯びるのが特徴です。口が「へ」の字に見えることも名前に関係していると言われています。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>日本近海の広い範囲で見られるほか、アフリカ東部やオーストラリアなどの亜熱帯・温帯海域にも広く分布しています [cite: 26]。</dd>
+                            <dd>日本近海の広い範囲で見られるほか、アフリカ東部やオーストラリアなどの亜熱帯・温帯海域にも広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沿岸の岩場や、波が穏やかな内湾に生息しています [cite: 28]。</dd>
+                            <dd>沿岸の岩場や、波が穏やかな内湾に生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>春の終わりから初夏にかけて行われます [cite: 29]。</dd>
+                            <dd>春の終わりから初夏にかけて行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月から9月頃まで獲れますが、夏を過ぎると見かけることが少なくなります [cite: 30]。</dd>
+                            <dd>4月から9月頃まで獲れますが、夏を過ぎると見かけることが少なくなります。</dd>
                         </dl>
                     </div>
                 </article>
@@ -244,15 +244,15 @@
                         <h3>ムツ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>成魚は金紫がかった褐色をしていますが、幼魚のころはやや金色を帯びています [cite: 33][cite_start]。尾びれの縁辺が黒っぽいのが特徴です [cite: 33]。</dd>
+                            <dd>成魚は金紫がかった褐色をしていますが、幼魚のころはやや金色を帯びています。尾びれの縁辺が黒っぽいのが特徴です。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道から九州南岸までの日本各地や、朝鮮半島、台湾周辺に分布しています [cite: 35]。</dd>
+                            <dd>北海道から九州南岸までの日本各地や、朝鮮半島、台湾周辺に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>幼魚は沿岸の浅い場所によく見られますが、成魚になると水深200〜700mの深い岩場へ移動し生息します [cite: 37]。</dd>
+                            <dd>幼魚は沿岸の浅い場所によく見られますが、成魚になると水深200〜700mの深い岩場へ移動し生息します。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>秋から春にかけて行われます [cite: 38]。</dd>
+                            <dd>秋から春にかけて行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月頃に稚魚や幼魚が大量に獲れます [cite: 39]。</dd>
+                            <dd>4月頃に稚魚や幼魚が大量に獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -267,15 +267,15 @@
                         <h3>マアジ（真鯵）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>体の中央に「ゼイゴ（稜鱗）」と呼ばれる硬いウロコが側線全体に一列に並んでいるのが特徴です [cite: 42][cite_start]。側線は胸びれの先端より前で急激にカーブしています [cite: 42]。</dd>
+                            <dd>体の中央に「ゼイゴ（稜鱗）」と呼ばれる硬いウロコが側線全体に一列に並んでいるのが特徴です。側線は胸びれの先端より前で急激にカーブしています。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道から九州、東シナ海など、日本周辺の海に広く分布しています [cite: 44]。</dd>
+                            <dd>北海道から九州、東シナ海など、日本周辺の海に広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沖合から沿岸の中層・下層を回遊しています [cite: 46][cite_start]。幼魚は内湾に入ってくることもあります [cite: 46]。</dd>
+                            <dd>沖合から沿岸の中層・下層を回遊しています。幼魚は内湾に入ってくることもあります。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>海域によりますが、水温が16〜22℃になる春から夏にかけて行われます [cite: 48]。</dd>
+                            <dd>海域によりますが、水温が16〜22℃になる春から夏にかけて行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月から11月頃まで獲れますが、4月頃には稚魚や幼魚が多く獲れます [cite: 49]。</dd>
+                            <dd>4月から11月頃まで獲れますが、4月頃には稚魚や幼魚が多く獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -288,15 +288,15 @@
                         <h3>カイワリ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>背側は暗青色、腹側は銀白色をしており、腹びれや尻びれ、尾びれが少し黄色いのが特徴です [cite: 52][cite_start]。幼魚のころは体側に6〜8本の暗褐色のしま模様（横帯）がありますが、成長すると消失します [cite: 52]。</dd>
+                            <dd>背側は暗青色、腹側は銀白色をしており、腹びれや尻びれ、尾びれが少し黄色いのが特徴です。幼魚のころは体側に6〜8本の暗褐色のしま模様（横帯）がありますが、成長すると消失します。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道より南の日本各地や東シナ海、インド・太平洋域に局所的に分布しています [cite: 54]。</dd>
+                            <dd>北海道より南の日本各地や東シナ海、インド・太平洋域に局所的に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>砂や泥がある海底の底層に生息しています [cite: 56]。</dd>
+                            <dd>砂や泥がある海底の底層に生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>5月〜11月頃の暖かい季節に行われます [cite: 57]。</dd>
+                            <dd>5月〜11月頃の暖かい季節に行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>6月から9月頃で、特に6月によく獲れます [cite: 58]。</dd>
+                            <dd>6月から9月頃で、特に6月によく獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -309,15 +309,15 @@
                         <h3>シマアジ（縞鯵）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>生きている時は体の中央に鮮やかな黄色の縦線（シマ）が入っていることが名前の由来です [cite: 61]。マアジのようなゼイゴは未発達です。</dd>
+                            <dd>生きている時は体の中央に鮮やかな黄色の縦線（シマ）が入っていることが名前の由来です。マアジのようなゼイゴは未発達です。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>本州中部以南の日本各地や、世界中の温帯海域に広く分布しています [cite: 63]。</dd>
+                            <dd>本州中部以南の日本各地や、世界中の温帯海域に広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>水深200mより浅い、沿岸の中層から下層を泳いでいます [cite: 65]。</dd>
+                            <dd>水深200mより浅い、沿岸の中層から下層を泳いでいます。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>秋から冬にかけてが中心で、水温が20℃前後に下がる頃に行われます [cite: 66]。</dd>
+                            <dd>秋から冬にかけてが中心で、水温が20℃前後に下がる頃に行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>水温が高くなる6月から8月頃に多く獲れます [cite: 67]。</dd>
+                            <dd>水温が高くなる6月から8月頃に多く獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -330,15 +330,15 @@
                         <h3>コノシロ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>背びれの最後の軟条が糸状に長く伸びていることや、エラの後ろに大きな暗色の斑点が1つあるのが特徴です [cite: 70]。寿司ネタの「コハダ」はこの魚の幼魚・若魚です。</dd>
+                            <dd>背びれの最後の軟条が糸状に長く伸びていることや、エラの後ろに大きな暗色の斑点が1つあるのが特徴です。寿司ネタの「コハダ」はこの魚の幼魚・若魚です。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>新潟県や松島湾より南の日本各地、南シナ海北部に分布しています [cite: 72]。</dd>
+                            <dd>新潟県や松島湾より南の日本各地、南シナ海北部に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>内湾性で、産卵期には川の水が混ざる汽水域まで進入します [cite: 74]。</dd>
+                            <dd>内湾性で、産卵期には川の水が混ざる汽水域まで進入します。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>春から初夏にかけて行われます [cite: 75]。</dd>
+                            <dd>春から初夏にかけて行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月から9月頃までで、特に4月・6月・9月によく獲れます [cite: 76]。</dd>
+                            <dd>4月から9月頃までで、特に4月・6月・9月によく獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -351,15 +351,15 @@
                         <h3>カタボシイワシ（肩星鰯）</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>体は平たく細長い形をしています [cite: 79][cite_start]。エラの後ろ（肩の位置）に黒い点があることからこの名がつきました [cite: 79][cite_start]。新鮮な大型個体は、背中の暗青色の下に薄いオレンジや黄色が見えることがあります [cite: 79]。</dd>
+                            <dd>体は平たく細長い形をしています。エラの後ろ（肩の位置）に黒い点があることからこの名がつきました。新鮮な大型個体は、背中の暗青色の下に薄いオレンジや黄色が見えることがあります。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>南日本や琉球列島などに多く分布していましたが、近年は北限が茨城県まで広がっており、分布の拡大が確認されています [cite: 81, 82]。</dd>
+                            <dd>南日本や琉球列島などに多く分布していましたが、近年は北限が茨城県まで広がっており、分布の拡大が確認されています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沿岸域で群れを成して生息しています [cite: 84]。</dd>
+                            <dd>沿岸域で群れを成して生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>不確かですが、6月〜7月頃に行われるとされています [cite: 85]。</dd>
+                            <dd>不確かですが、6月〜7月頃に行われるとされています。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>4月から9月頃で、特に6月頃に多く獲れます [cite: 86]。</dd>
+                            <dd>4月から9月頃で、特に6月頃に多く獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -372,15 +372,15 @@
                         <h3>ギマ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>背びれと腹びれに強力なトゲ（棘）があるため注意が必要です [cite: 89][cite_start]。体色は銀色や灰色で、ヒレは一様に黄色をしています [cite: 89]。体表から粘液を出す特徴もあります。</dd>
+                            <dd>背びれと腹びれに強力なトゲ（棘）があるため注意が必要です。体色は銀色や灰色で、ヒレは一様に黄色をしています。体表から粘液を出す特徴もあります。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道南部から九州南岸、西太平洋の亜熱帯・熱帯海域に分布しています [cite: 91]。</dd>
+                            <dd>北海道南部から九州南岸、西太平洋の亜熱帯・熱帯海域に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沿岸の浅い海底に生息し、幼魚は汽水域や海草（アマモ）のある場所にも出現します [cite: 93]。</dd>
+                            <dd>沿岸の浅い海底に生息し、幼魚は汽水域や海草（アマモ）のある場所にも出現します。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>6月〜7月頃に内湾に入り込んで行われます [cite: 94]。</dd>
+                            <dd>6月〜7月頃に内湾に入り込んで行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>5月から7月頃で、特に5月にはまとまって獲れます [cite: 95]。</dd>
+                            <dd>5月から7月頃で、特に5月にはまとまって獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -391,7 +391,7 @@
                 <h2 class="section-title toxic-title lang-ja">毒のある生き物</h2>
                 <h2 class="section-title toxic-title lang-en" style="display:none;">Poisonous Creatures</h2>
                 
-                <p class="toxic-warning lang-ja">注意: 以下の生き物は、触れたり食べたりすると危険です。</p>
+                <p class="toxic-warning lang-ja">注意: 以下の生き物は、触れたり食べたりすることに危険が伴います。</p>
                 <p class="toxic-warning lang-en" style="display:none;">Warning: These creatures are venomous/poisonous. Do not touch.</p>
 
                 <article class="fish-card">
@@ -402,15 +402,15 @@
                         <h3>ハコフグ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>名前の通り、体の断面が四角く、箱のような形をしています [cite: 99][cite_start]。成魚には黒い点はありませんが、幼魚の体には黒い水玉模様が散在しています [cite: 100]。皮膚に毒があることが知られています。</dd>
+                            <dd>名前の通り、体の断面が四角く、箱のような形をしています。成魚には黒い点はありませんが、幼魚の体には黒い水玉模様が散在しています。皮膚に毒があることが知られています。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>北海道から九州まで、日本の沿岸各地や朝鮮半島などに広く分布しています [cite: 102]。</dd>
+                            <dd>北海道から九州まで、日本の沿岸各地や朝鮮半島などに広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>浅い内湾を好んで生息しています [cite: 105]。</dd>
+                            <dd>浅い内湾を好んで生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>春から夏頃に行われます [cite: 106]。</dd>
+                            <dd>春から夏頃に行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>5月から11月頃まで見られ、特に6〜7月によく獲れます [cite: 107]。</dd>
+                            <dd>5月から11月頃まで見られ、特に6〜7月によく獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -423,15 +423,15 @@
                         <h3>セトミノカサゴ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>非常に大きな胸びれと背びれを持ちます [cite: 110][cite_start]。胸びれを広げると鮮やかな青色の波状模様が見えますが [cite: 111]、ヒレのトゲには強い毒があるため注意が必要です。</dd>
+                            <dd>非常に大きな胸びれと背びれを持ちます。胸びれを広げると鮮やかな青色の波状模様が見えますが、ヒレのトゲには強い毒があるため注意が必要です。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>千葉県から九州南部の太平洋沿岸など、暖かい海に分布しています [cite: 113]。</dd>
+                            <dd>千葉県から九州南部の太平洋沿岸など、暖かい海に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>水深55〜300m程度の、やや深い砂泥底に生息しています [cite: 115]。</dd>
+                            <dd>水深55〜300m程度の、やや深い砂泥底に生息しています。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>詳細は不明です [cite: 116]。</dd>
+                            <dd>詳細は不明です。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>7月から10月頃で、9月以降によく獲れます [cite: 117]。</dd>
+                            <dd>7月から10月頃で、9月以降によく獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -444,15 +444,15 @@
                         <h3>モヨウフグ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>体は小さなトゲに覆われています [cite: 120][cite_start]。幼魚は橙色で腹部に黒い線がありますが、成長すると灰色や白色の地に多数の黒い斑点が見られるようになります [cite: 121]。</dd>
+                            <dd>体は小さなトゲに覆われています。幼魚は橙色で腹部に黒い線がありますが、成長すると灰色や白色の地に多数の黒い斑点が見られるようになります。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>日本各地の沿岸や、南の島のサンゴ礁域などに広く分布しています [cite: 123]。</dd>
+                            <dd>日本各地の沿岸や、南の島のサンゴ礁域などに広く分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>沿岸の浅い場所にある岩場やサンゴ礁域に見られます [cite: 125]。</dd>
+                            <dd>沿岸の浅い場所にある岩場やサンゴ礁域に見られます。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>不明です [cite: 126]。</dd>
+                            <dd>不明です。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>5月から11月頃まで、各月にコンスタントに獲れます [cite: 128]。</dd>
+                            <dd>5月から11月頃まで、各月にコンスタントに獲れます。</dd>
                         </dl>
                     </div>
                 </article>
@@ -465,15 +465,15 @@
                         <h3>キタマクラ</h3>
                         <dl class="fish-details">
                             <dt>特徴</dt>
-                            [cite_start]<dd>茶褐色の体で、体側に2本の暗い色の縦線があります [cite: 131]。名前には「食べると死んで北枕に寝かされる」という意味が含まれるとされる毒魚です。</dd>
+                            <dd>茶褐色の体で、体側に2本の暗い色の縦線があります。名前には「食べると死んで北枕に寝かされる」という意味が含まれるとされる毒魚です。</dd>
                             <dt>分布域</dt>
-                            [cite_start]<dd>福島県以南の日本各地や、インド・西太平洋域に分布しています [cite: 133]。</dd>
+                            <dd>福島県以南の日本各地や、インド・西太平洋域に分布しています。</dd>
                             <dt>生息環境</dt>
-                            [cite_start]<dd>浅い海の岩場やサンゴ礁、砂底域などを好みます [cite: 135]。</dd>
+                            <dd>浅い海の岩場やサンゴ礁、砂底域などを好みます。</dd>
                             <dt>産卵期</dt>
-                            [cite_start]<dd>夏に行われます [cite: 136]。</dd>
+                            <dd>夏に行われます。</dd>
                             <dt>獲れる時期</dt>
-                            [cite_start]<dd>7月から9月頃で、特に8月頃によく獲れます [cite: 137]。</dd>
+                            <dd>7月から9月頃で、特に8月頃によく獲れます。</dd>
                         </dl>
                     </div>
                 </article>
