--- a/fujioka_lab/fujioka_top.html
+++ b/fujioka_lab/fujioka_top.html
@@ -145,7 +145,7 @@
                         <p class="lang-en" style="display:none;">We use computers to accurately measure fish sizes from the photographs taken.</p>
                     </div>
                     <div class="method-card">
-                        <img src="https://via.placeholder.com/400x250/007a8a/ffffff?text=Data+Analysis" alt="データ解析のイメージ">
+                        <img src="/fujioka_lab/datakaiseki.jpg" alt="データ解析のイメージ">
                         <h4 class="lang-ja">データ解析</h4>
                         <h4 class="lang-en" style="display:none;">Data Analysis</h4>
                         <p class="lang-ja">集めたデータと海の環境データを組み合わせて、魚の生態を統計的に分析します。</p>
