--- a/data_top/kodomo.html
+++ b/data_top/kodomo.html
@@ -140,6 +140,31 @@
         background-color: #FFCDD2;
         color: #C62828;
     }
+
+    /* --- スマホ用調整 --- */
+    @media (max-width: 600px) {
+        .toxic-section {
+            padding: 1.5rem 0.5rem;
+        }
+        .kids-card {
+            padding: 1.2rem;
+            margin-bottom: 2rem;
+            border-width: 3px;
+        }
+        .kids-card img {
+            margin-bottom: 1rem;
+        }
+        .fish-name {
+            font-size: 1.5rem;
+        }
+        .toxic-title {
+            font-size: 1.6rem;
+        }
+        .toxic-warning {
+            margin-bottom: 1.5rem;
+            font-size: 1rem;
+        }
+    }
   </style>
 </head>
 <body>
@@ -165,13 +190,13 @@
                 <h2 class="fish-name">マダイ（真鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd>からだが赤くて、<ruby>背中<rt>せなか</rt></ruby>の青いキラキラした点々がおしゃれ！大人の魚になると、この青い点々は少なくなるよ。尾ビレの後ろが黒いこと、<ruby>背中<rt>せなか</rt></ruby>のヒレが<ruby>整<rt>ととの</rt></ruby>っていることも目印！</dd>
+                    <dd>からだが赤くて、<ruby>背中<rt>せなか</rt></ruby>の青いキラキラした点々がおしゃれ！大人になると、この青い点々は少なくなるよ。尾ビレの後ろが黒いことや、<ruby>背中<rt>せなか</rt></ruby>のヒレがきれいな形をしているのも目印だよ！</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>まで、日本のいろいろな海にいて、<ruby>韓国<rt>かんこく</rt></ruby>や<ruby>台湾<rt>たいわん</rt></ruby>の近くにも住んでいるよ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>海の中の岩や<ruby>砂<rt>すな</rt></ruby>があるところ。</dd>
+                    <dd>海の中の<ruby>岩場<rt>いわば</rt></ruby>や<ruby>砂<rt>すな</rt></ruby>があるところ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春から<ruby>初夏<rt>しょか</rt></ruby>にかけて（4月〜6月くらい）。</dd>
@@ -186,13 +211,13 @@
                 <h2 class="fish-name">チダイ（血鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd>マダイに<ruby>似<rt>に</rt></ruby>ているけど、少し違うよ。エラのふちが赤くて、まるで血がついているみたいに見えることが名前の<ruby>由来<rt>ゆらい</rt></ruby>です！からだはピンク色と銀色っぽく、<ruby>背中<rt>せなか</rt></ruby>のヒレが長いよ。</dd>
+                    <dd>マダイに<ruby>似<rt>に</rt></ruby>ているけど、少し<ruby>違<rt>ちが</rt></ruby>うよ。エラのふちが赤くて、まるで血がついているみたいに見えるから、この名前がついたんだ！からだはピンク色と銀色っぽく、<ruby>背中<rt>せなか</rt></ruby>のヒレが長いよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道の南から<ruby>九州<rt>きゅうしゅう</rt></ruby>までの海や、<ruby>瀬戸内海<rt>せとないかい</rt></ruby>にもいるよ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>海の底の岩や<ruby>砂利<rt>じゃり</rt></ruby>があるところ。</dd>
+                    <dd>海の底の<ruby>岩場<rt>いわば</rt></ruby>や<ruby>砂利<rt>じゃり</rt></ruby>があるところ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>秋（9月〜11月くらい）。</dd>
@@ -207,13 +232,13 @@
                 <h2 class="fish-name">ヘダイ（平鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd>体は銀色で、横から見ると平べったい形をしているよ。若い魚はヒレが黄色っぽい。身体が平たいことや、 口がへの字に見えることが名前の<ruby>由来<rt>ゆらい</rt></ruby>とも言われているよ。</dd>
+                    <dd>体は銀色で、横から見ると平べったい形をしているよ。若い魚はヒレが黄色っぽいのが<ruby>特徴<rt>とくちょう</rt></ruby>。体が平たいことや、 口が「へ」の字に見えることが名前の<ruby>由来<rt>ゆらい</rt></ruby>と言われているよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
-                    <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。遠くのアフリカやオーストラリアの海にも<ruby>仲間<rt>なかま</rt></ruby>がいる！</dd>
+                    <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。遠くのアフリカやオーストラリアの海にも<ruby>仲間<rt>なかま</rt></ruby>がいるんだ！</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>海岸に近い岩場や、波が<ruby>穏<rt>おだ</rt></ruby>やかな<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>。</dd>
+                    <dd>海岸に近い<ruby>岩場<rt>いわば</rt></ruby>や、波が<ruby>穏<rt>おだ</rt></ruby>やかな<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春の終わりから夏の初めにかけて。</dd>
@@ -234,13 +259,13 @@
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>までの日本の海に広く住んでいるよ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>子供のころは浅い海にいるけど、大人はとても深い岩場へ<ruby>引<rt>ひ</rt></ruby>っ<ruby>越<rt>こ</rt></ruby>します。</dd>
+                    <dd>子供のころは浅い海にいるけど、大人はとても深い<ruby>岩場<rt>いわば</rt></ruby>へ<ruby>引<rt>ひ</rt></ruby>っ<ruby>越<rt>こ</rt></ruby>すよ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>秋から春にかけて。</dd>
 
                     <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
-                    <dd>4月ごろに、子供のムツがたくさん<ruby>獲<rt>と</rt></ruby>れます。</dd>
+                    <dd>4月ごろに、子供のムツがたくさん<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
 
@@ -249,13 +274,13 @@
                 <h2 class="fish-name">マアジ（真鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd>体の中央に「ゼイゴ」と呼ばれる<ruby>硬<rt>かた</rt></ruby>いトゲトゲのウロコが一列に<ruby>並<rt>なら</rt></ruby>んでいるのが<ruby>特徴<rt>とくちょう</rt></ruby>。お刺身やフライでおなじみの魚だね。</dd>
+                    <dd>体の中央に「ゼイゴ」と呼ばれる<ruby>硬<rt>かた</rt></ruby>いトゲトゲのウロコが一列に<ruby>並<rt>なら</rt></ruby>んでいるのが<ruby>特徴<rt>とくちょう</rt></ruby>。お刺身やフライでおなじみの魚だよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>まで、日本の海ならどこにでもいるよ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>海の真ん中から底の方を泳いでいるよ。子供のアジは岸の近くや<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>に入ってくることがあるよ。</dd>
+                    <dd>海の真ん中から底の方を泳いでいるよ。子供のアジは岸の近くや<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>に入ってくることがあるんだ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>場所によって違うけど、水温が暖かくなる春から夏にかけて<ruby>卵<rt>たまご</rt></ruby>を産むよ。</dd>
@@ -270,7 +295,7 @@
                 <h2 class="fish-name">カイワリ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd><ruby>背中<rt>せなか</rt></ruby>は青っぽくて、お<ruby>腹<rt>なか</rt></ruby>は銀色に光っているよ。ヒレが少し黄色いのも<ruby>特徴<rt>とくちょう</rt></ruby>。子供のころは体に6〜8本のしま<ruby>模様<rt>もよう</rt></ruby>があるけど、大きくなると消えちゃいます。</dd>
+                    <dd><ruby>背中<rt>せなか</rt></ruby>は青っぽくて、お<ruby>腹<rt>なか</rt></ruby>は銀色に光っているよ。ヒレが少し黄色いのも<ruby>特徴<rt>とくちょう</rt></ruby>。子供のころは体に6〜8本のしま<ruby>模様<rt>もよう</rt></ruby>があるけど、大きくなると消えちゃうよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道より南の日本の海や、もっと南の暖かい海にもいるよ。</dd>
@@ -291,13 +316,13 @@
                 <h2 class="fish-name">シマアジ（縞鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd>生きているときは、体の真ん中に黄色い線（シマ）が入っているから「シマアジ」と言います。</dd>
+                    <dd>生きているときは、体の真ん中に黄色い線（シマ）が入っているから「シマアジ」と呼ぶんだよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の真ん中あたりから南の暖かい海に住んでいて、世界中の暖かい海にもいるよ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                    <dd>岸に近い海の<ruby>中層<rt>ちゅうそう</rt></ruby>から底の方を泳いでいるよ。</dd>
+                    <dd>岸に近い海の<ruby>中層<rt>ちゅうそう</rt></ruby>（真ん中）から底の方を泳いでいるよ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>秋から冬にかけて。水温がちょうどよくなると元気になるよ。</dd>
@@ -312,7 +337,7 @@
                 <h2 class="fish-name">コノシロ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                    <dd><ruby>背中<rt>せなか</rt></ruby>のヒレの後ろが糸のように長く<ruby>伸<rt>の</rt></ruby>びていることや、体の横に黒い点々が<ruby>並<rt>なら</rt></ruby>んでいるのが目印！お寿司の「コハダ」はこの魚の子供だよ。</dd>
+                    <dd><ruby>背中<rt>せなか</rt></ruby>のヒレの後ろが糸のように長く<ruby>伸<rt>の</rt></ruby>びていることや、体の横に黒い点々が<ruby>並<rt>なら</rt></ruby>んでいるのが目印！お寿司の「コハダ」は、この魚の子供なんだよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の真ん中より南の海に住んでいるよ。</dd>
@@ -336,13 +361,13 @@
                     <dd>体は平たくて細長いよ。エラの後ろに黒い点があるから「カタボシ」って名前がついたんだ。<ruby>新鮮<rt>しんせん</rt></ruby>なときはオレンジや黄色っぽく見えることもあるよ。</dd>
 
                     <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
-                    <dd>日本の南の方や、もっと南の温かい海にたくさんいるよ。最近は少し北の海でも見つかるようになってきたよ。</dd>
+                    <dd>日本の南の方や、もっと南の温かい海にたくさんいるよ。最近は少し北の海でも見つかるようになってきたんだ。</dd>
 
                     <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>岸に近い海で、みんなで集まって泳いでいるよ。</dd>
 
                     <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
-                    <dd>はっきりとは分からないけど、6月〜7月ごろと言われているよ。</dd>
+                    <dd>はっきりとは分からないけど、6月〜7月ごろと言われているんだ。</dd>
 
                     <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から9月くらい。特に6月にはとってもたくさん<ruby>獲<rt>と</rt></ruby>れるよ！</dd>
@@ -410,7 +435,7 @@
                         <dd>少し深い海の底の<ruby>砂<rt>すな</rt></ruby>地にいるよ。</dd>
 
                         <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
-                        <dd>まだよく分かっていなくて、<ruby>謎<rt>なぞ</rt></ruby>が多い魚だね。</dd>
+                        <dd>まだよく分かっていなくて、<ruby>謎<rt>なぞ</rt></ruby>が多い魚なんだ。</dd>
 
                         <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>7月から10月くらい。秋になるとよく見かけるようになるよ。</dd>
@@ -422,13 +447,13 @@
                     <h2 class="fish-name">モヨウフグ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                        <dd>お<ruby>腹<rt>なか</rt></ruby>に小さなトゲトゲがあるよ。子供のころはお<ruby>腹<rt>なか</rt></ruby>に黒い線があるけど、大人になると黒い<ruby>斑点<rt>はんてん</rt></ruby>がたくさん出てくる。</dd>
+                        <dd>お<ruby>腹<rt>なか</rt></ruby>に小さなトゲトゲがあるよ。子供のころはお<ruby>腹<rt>なか</rt></ruby>に黒い線があるけど、大人になると黒い<ruby>斑点<rt>はんてん</rt></ruby>がたくさん出てくるんだ。</dd>
 
                         <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
-                        <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。南の島のサンゴ<ruby>礁<rt>しょう</rt></ruby>にも住んでいる。</dd>
+                        <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。南の島のサンゴ<ruby>礁<rt>しょう</rt></ruby>にも住んでいるよ。</dd>
 
                         <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                        <dd>岸に近い浅い岩場やサンゴの海が好きだよ。</dd>
+                        <dd>岸に近い浅い<ruby>岩場<rt>いわば</rt></ruby>やサンゴの海が好きだよ。</dd>
 
                         <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>まだよく分かっていないんだ。</dd>
@@ -443,13 +468,13 @@
                     <h2 class="fish-name">キタマクラ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
-                        <dd>体は茶色っぽくて、横に2本の暗い色の線があるよ。名前に「北枕（きたまくら）」とついているのは、食べると死んでしまう（北枕で寝かされる）という怖い意味があるからだよ。絶対に食べちゃダメだよ！</dd>
+                        <dd>体は茶色っぽくて、横に2本の暗い色の線があるよ。名前に「北枕（きたまくら）」とついているのは、食べると死んでしまって「北枕」で寝かされることになる……という怖い意味があるからなんだ。絶対に食べちゃダメだよ！</dd>
 
                         <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                         <dd>日本のあちこちの海にいるよ。南の島にもたくさんいるんだ。</dd>
 
                         <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
-                        <dd>岩場やサンゴ<ruby>礁<rt>しょう</rt></ruby>など、<ruby>隠<rt>かく</rt></ruby>れられる場所が好きだよ。</dd>
+                        <dd><ruby>岩場<rt>いわば</rt></ruby>やサンゴ<ruby>礁<rt>しょう</rt></ruby>など、<ruby>隠<rt>かく</rt></ruby>れられる場所が好きだよ。</dd>
 
                         <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>夏ごろとされているよ。</dd>
