--- a/data_top/zukan.html
+++ b/data_top/zukan.html
@@ -173,8 +173,8 @@
                 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/madai_1" alt="マダイの写真 1">
-                        <img src="..//data_top/madai_2.jpg" alt="マダイの写真 2">
+                        <img src="..//data_top/images/madai_1.jpg" alt="マダイの写真 1">
+                        <img src="..//data_top/images/madai_2.jpg" alt="マダイの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>マダイ（真鯛）</h3>
