--- a/data_top/kodomo.html
+++ b/data_top/kodomo.html
@@ -186,7 +186,7 @@
 
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/EB5757/FFFFFF?text=Madai" alt="マダイ">
+                <img src="../data_top/images/madai_1.jpg" alt="マダイ">
                 <h2 class="fish-name">マダイ（真鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
